# path-edgecase-pkg

./: pyproject.toml
src/path_edgecase_pkg/: __init__.py
