[project]
name = "path-edgecase-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sunfkny", email = "30853461+sunfkny@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
